--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>BELAJAR PKW</title>
+    <title>Tugas Jam</title>
 
 </head>
 
 <body>
 
-    20190140097 - FAYSAL FADEL MAULANA - Kelas C
+
 
 </body>
 
-</html>
+</html>a
