--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 </head>
 
-<body style="font-size: 100px; font-family: Arial; color: blue; background-color: chocolate; background-size : cover; padding: 200px 450px;" id="jam">
+<body style="font-size: 100px; font-family: Arial; color: blueviolet; 
+background-color: chocolate; background-size : cover; padding: 200px 450px;" id="jam">
 
 
 </body>
