--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-    <title>Tugas Jam</title>
+    <title>Tugas Jam Digital</title>
     <script type="text/javascript">
         window.onload = function() {
             jam();
