--- a/index.html
+++ b/index.html
@@ -4,34 +4,40 @@
 
 <head>
 
-    <title>Tugas Jam Digital</title>
-    <script type="text/javascript">
-        window.onload = function() {
-            jam();
-        }
-
-        function jam() {
-            var a = document.getElementById('jam'),
-                d = new Date(),
-                h, m, s;
-            h = d.getHours();
-            m = set(d.getMinutes());
-            s = set(d.getSeconds());
-
-            setTimeout('jam', 1000);
-        }
-
-        function set(a) {
-            a = a < 10 ? '0' + a : a;
-            return a;
-        }
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-witdh, initial-scale=1.0">
+    <title>Jam Digital</title>
 
 </head>
 
-<body style="font-size: 100px; font-family: Arial; color: blueviolet; background-size : cover; padding: 200px 450px;" id="jam">
+<body>
+    <div id="myclock" class="clock"></div>
+    <script>
+        function showtime() {
+            var date = new date();
+            var h = date.getHours();
+            var m = date.getMinutes();
+            var s = date.getSeconds();
+            var session = "AM";
 
+            if (h > 12) {
+                h = h - 12;
+                session = "PM";
+            }
+            if (h == 0) {
+                h = 12;
+            }
+            h = (h < 10) ? "0" + h : h;
+            m = (m < 10) ? "0" + m : m;
+            s = (s < 10) ? "0" + s : s;
+            var time = h + ":" + m ":" + s "" + session;
+            document.getElementById('myclock').innerText = time;
+            document.getElementById('myclock').textContent = time;
 
+            setTimeout(showtime, 1000);
+        }
+        showTime()
+    </script>
 </body>
 
 </html>
