--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             h = (h < 10) ? "0" + h : h;
             m = (m < 10) ? "0" + m : m;
             s = (s < 10) ? "0" + s : s;
-            var time = h + ":" + m ":" + s "" + session;
+            var time = h + ":" + m ":" + s ":" + session;
             document.getElementById('myclock').innerText = time;
             document.getElementById('myclock').textContent = time;
 
