--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             document.getElementById('myclock').innerText = time;
             document.getElementById('myclock').textContent = time;
 
-            setTimeout(showtime, 1000);
+            setTimeout(showTime, 1000);
         }
-        showTime()
+        showTime();
     </script>
 </body>
 
