--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             h = (h < 10) ? "0" + h : h;
             m = (m < 10) ? "0" + m : m;
             s = (s < 10) ? "0" + s : s;
-            var time = h + ":" + m + ":" + s + "" + session;
-            document.getElementById('myclock').innerText = time;
-            document.getElementById('myclock').textContent = time;
+            var time = h + ":" + m + ":" + s + " " + session;
+            Document.getElementById('myclock').innerText = time;
+            Document.getElementById('myclock').textContent = time;
 
             setTimeout(showTime, 1000);
         }
