--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <div id="myclock" class="clock"></div>
     <script>
-        function showtime() {
-            var date = new Date();
+        function showTime() {
+            VarDate = new Date();
             var h = date.getHours();
             var m = date.getMinutes();
             var s = date.getSeconds();
