--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="MyClock" class="Clock"></div>
     <script>
         function showTime() {
-            VarDate = new Date();
+            var date = new Date();
             var h = date.getHours();
             var m = date.getMinutes();
             var s = date.getSeconds();
